--- a/index.html
+++ b/index.html
@@ -14,26 +14,30 @@
       <header class="header-container">
         <div class="container">
           <div class="header">
-            <a href="/" class="logo">
-              <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
-            </a>
-            <nav class="menu">
-              <ul class="menu__list">
-                <li class="menu__item">
-                  <a href="/" class="menu__link">Главная</a>
-                </li>
-                <li class="menu__item menu__item_active"> <!--модификатор-->                
-                  <a href="./service.html" class="menu__link">Услуги</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
-                </li>
-              </ul>
-            </nav>
-            <address class="contacts">
-              <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-              <div class="contacts__dropdown-title">График работы</div>
-            </address>
+            <div class="header__col">
+              <a href="/" class="logo">
+                <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
+              </a>
+              <nav class="menu">
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a href="/" class="menu__link">Главная</a>
+                  </li>
+                  <li class="menu__item menu__item_active"> <!--модификатор-->                
+                    <a href="./service.html" class="menu__link">Услуги</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#" class="menu__link">Отзывы</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="header__col header__col_align_right"> <!--модификатор--> 
+              <address class="contacts">
+                <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                <div class="contacts__dropdown-title">График работы</div>
+              </address>
+            </div>
           </div>
         </div>        
       </header>
